feat: ProfessorDashboard e Duvidas